--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                 
                 <!-- Search Form -->
                 <form class="d-flex me-3" action="{{ url_for('main.search') }}" method="GET">
-                    <input class="form-control me-2" type="search" name="q" placeholder="Search resources..." value="{{ request.args.get('q', '') }}">
+                    <input class="form-control me-2" type="search" name="q" placeholder="Search resources, posts, users..." value="{{ request.args.get('q', '') }}">
                     <button class="btn btn-outline-light" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
