--- a/templates/auth/edit_profile.html
+++ b/templates/auth/edit_profile.html
@@ -12,7 +12,7 @@
                     <a class="btn btn-outline-secondary" href="{{ url_for('auth.profile') }}"><i class="fas fa-arrow-left me-1"></i>Back</a>
                 </div>
                 <div class="card-body">
-                    <form method="post">
+                    <form method="post" enctype="multipart/form-data">
                         {{ form.hidden_tag() }}
 
                         <div class="row">
@@ -43,6 +43,12 @@
                             {% if form.bio.errors %}
                                 <div class="text-danger small mt-1">{% for e in form.bio.errors %}<div>{{ e }}</div>{% endfor %}</div>
                             {% endif %}
+                        </div>
+
+                        <div class="mb-3">
+                            {{ form.avatar.label(class='form-label fw-bold') }}
+                            {{ form.avatar(class='form-control') }}
+                            <div class="form-text">PNG/JPG/GIF up to 2MB.</div>
                         </div>
 
                         <div class="d-flex justify-content-end gap-2">
