--- a/templates/base.html
+++ b/templates/base.html
@@ -68,17 +68,25 @@
                 <ul class="navbar-nav">
                     {% if current_user.is_authenticated %}
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                                <i class="fas fa-bell me-1"></i>
-                                <span id="notification-count" class="badge bg-danger">0</span>
+                            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="position-relative">
+                                    <i class="fas fa-bell"></i>
+                                    <span id="notification-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:.6rem; display:none;"></span>
+                                </span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end notification-dropdown">
                                 <li><h6 class="dropdown-header">Notifications</h6></li>
-                                <div id="notifications-list">
-                                    <li><a class="dropdown-item text-muted" href="#">No new notifications</a></li>
-                                </div>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item text-center" href="#" id="mark-all-read">Mark all as read</a></li>
+                                <li>
+                                    <div id="notifications-list" class="notification-list-scroll">
+                                        <a class="dropdown-item text-muted" href="#">No notifications</a>
+                                    </div>
+                                </li>
+                                <li><div class="dropdown-divider m-0"></div></li>
+                                <li>
+                                    <div class="text-center p-2">
+                                        <a class="dropdown-item" href="#" id="mark-all-read">Mark all as read</a>
+                                    </div>
+                                </li>
                             </ul>
                         </li>
                         
